--- a/cardiovascular_risk_prediction.ipynb
+++ b/cardiovascular_risk_prediction.ipynb
@@ -3,10 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
-        "FJNUwmbgGyua",
         "w6K7xa23Elo4",
         "yQaldy8SH6Dl",
         "PH-0ReGfmX4f",
@@ -98,27 +96,26 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# **Project Name**    -\n",
-        "\n"
-      ],
       "metadata": {
-        "id": "vncDsAP0Gaoa"
-      }
+        "id": "e5f6v3vmy6bD"
+      },
+      "source": [
+        "# **Project Name**    -<b>cardiovascular risk prediction\n",
+        "</b>\n"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##### **Project Type**    - EDA/Regression/Classification/Unsupervised\n",
-        "##### **Contribution**    - Individual/Team\n",
-        "##### **Team Member 1 -**\n",
-        "##### **Team Member 2 -**\n",
-        "##### **Team Member 3 -**\n",
-        "##### **Team Member 4 -**"
-      ],
       "metadata": {
         "id": "beRrZCGUAJYm"
-      }
+      },
+      "source": [
+        "**Project Type**    - Classification\n",
+        "##### **Contribution**    - Team\n",
+        "##### **Team Member 1 -**Sunil Kumar\n",
+        "##### **Team Member 2 -**Dharani Putta\n",
+        "##### **Team Member 3 -**Vivek Singh\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -132,7 +129,29 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write the summary here within 500-600 words."
+        "A cardiovascular disease prediction classification project is a data-driven initiative aimed at developing predictive models to identify individuals who are at risk of developing cardiovascular diseases (CVD). These projects use machine learning and data analysis techniques to analyze medical and health-related data to make predictions and classify individuals into risk categories. Here's a summary of such a project:\n",
+        "\n",
+        "The project begins with the collection of relevant medical data, which may include patient demographics, lifestyle factors, medical history, and vital signs (such as blood pressure and heart rate).\n",
+        "\n",
+        "The collected data is cleaned, processed, and transformed into a suitable format for analysis. Missing values are addressed, and outliers may be treated.\n",
+        "\n",
+        "Relevant features (variables) are selected or engineered to create new ones that may improve the predictive power of the model. For example, features like body mass index (BMI), cholesterol levels, and family history of CVD are often important.\n",
+        "\n",
+        "The data is divided into training, validation, and test sets to build and evaluate the predictive models.\n",
+        "\n",
+        "Various classification algorithms are considered, such as logistic regression, decision trees, random forests, and support vectors. The choice of the model depends on the nature of the data and the problem's complexity.\n",
+        "\n",
+        "The selected model is trained on the training dataset using historical data and target labels (CVD outcomes).\n",
+        "\n",
+        "The model's performance is assessed on the validation dataset using evaluation metrics such as accuracy, precision, recall, F1 score, and ROC AUC. Hyperparameter tuning may be performed to optimize the model's performance.\n",
+        "\n",
+        "The final model is tested on the independent test dataset to evaluate its real-world performance.\n",
+        "\n",
+        "To enhance the project's clinical relevance, models may be designed to provide explanations or feature importance rankings to healthcare professionals, explaining why a specific prediction was made.\n",
+        "\n",
+        "Raising awareness among patients about CVD risk factors, prevention, and the role of predictive models is an important aspect of such projects.\n",
+        "\n",
+        "CVD prediction classification projects have the potential to significantly impact public health by enabling early identification of at-risk individuals and facilitating timely interventions to prevent or manage cardiovascular diseases. They align with the broader goals of personalized medicine and data-driven healthcare to improve patient outcomes and reduce healthcare costs."
       ],
       "metadata": {
         "id": "F6v_1wHtG2nS"
