--- a/cardiovascular_risk_prediction.ipynb
+++ b/cardiovascular_risk_prediction.ipynb
@@ -5,8 +5,6 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "w6K7xa23Elo4",
-        "yQaldy8SH6Dl",
         "PH-0ReGfmX4f",
         "mDgbUHAGgjLW",
         "GF8Ens_Soomf",
@@ -169,7 +167,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Provide your GitHub Link here."
+        "https://github.com/puttadharani/cardiovascular-risk-prediction"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
@@ -187,7 +185,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Write Problem Statement Here.**"
+        "Cardiovascular diseases (CVD) are a leading cause of morbidity and mortality worldwide, imposing a significant burden on healthcare systems. The goal of this project is to develop an accurate and clinically relevant predictive classification model for the early detection and risk stratification of cardiovascular diseases. The model should be capable of identifying individuals at high risk of developing CVD, allowing for timely interventions and personalized healthcare.\n",
+        "The project aims to contribute to the early identification and management of cardiovascular diseases, ultimately improving patient care and reducing the societal and economic burden of CVD."
       ],
       "metadata": {
         "id": "DpeJGUA3kjGy"
