--- a/cardiovascular_risk_prediction.ipynb
+++ b/cardiovascular_risk_prediction.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "PH-0ReGfmX4f",
         "mDgbUHAGgjLW",
         "GF8Ens_Soomf",
         "0wOQAZs5pc--",
@@ -204,7 +203,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "Enable healthcare providers to offer personalized interventions and treatment plans to individuals identified as high-risk, promoting proactive health management.Improve the allocation of healthcare resources by targeting high-risk individuals, ensuring that interventions are focused on those who need them most, thereby optimizing resource utilization.<br>\n",
+        "To reduce the economic burden of cardiovascular diseases by decreasing hospitalizations, emergency room visits, and long-term treatment costs through early detection and preventive measures.By achieving these business objectives, the project aligns with the broader goals of healthcare organizations to provide higher quality care, reduce costs, and enhance patient well-being, while also contributing to a more efficient and effective healthcare system.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "PhDvGCAqmjP1"
@@ -346,22 +350,11 @@
     {
       "cell_type": "code",
       "source": [
+        "#creating df\n",
         "df=pd.read_csv('/content/drive/MyDrive/data_cardiovascular_risk.csv')"
       ],
       "metadata": {
         "id": "E5aBoalaJxtw"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "new=pd.DataFrame(df['education'])\n",
-        "new.value_counts()"
-      ],
-      "metadata": {
-        "id": "VtgvzygSZ13W"
       },
       "execution_count": null,
       "outputs": []
@@ -572,13 +565,13 @@
       "cell_type": "markdown",
       "source": [
         "**id:** patient id\n",
-        "####Demographic:\n",
+        "####*Demographic*:\n",
         "\n",
         "**Age:** Age of the patient (Descrete)<br>\n",
         "**Education:** The level of education of the patient (categorical values - 1,2,3,4)\n",
         "**Sex:** Gender (\"M\" or \"F\")<br>\n",
         "\n",
-        "####Behavioral:\n",
+        "####*Behavioral:*\n",
         "\n",
         "**is_smoking:** whether currently smoking or no (\"YES\" or \"NO\")<br>\n",
         "**Cigs Per Day:** cigarettes smoked per day(descrete)<br>\n",
@@ -646,6 +639,8 @@
       "cell_type": "code",
       "source": [
         "# Write your code to make your dataset analysis ready.\n",
+        "\n",
+        "# Display the first few rows of the DataFrame 'df'\n",
         "df.head()\n"
       ],
       "metadata": {
@@ -657,6 +652,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Check and display the number of missing values in each column of the DataFrame\n",
         "df.isna().sum()\n"
       ],
       "metadata": {
@@ -668,6 +664,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Fill missing values in the 'education' and 'BPMeds' columns with the mode of their respective columns\n",
         "df['education']=df['education'].fillna(df['education'].mode)\n",
         "df['BPMeds']=df['BPMeds'].fillna(df['BPMeds'].mode)"
       ],
@@ -680,6 +677,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Select rows where individuals are non-smokers and 'cigsPerDay' is missing\n",
         "non_smokers=df[(df['is_smoking']=='NO')&(df['cigsPerDay'].isna())]\n",
         "non_smokers"
       ],
@@ -692,6 +690,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Create a distribution plot for 'cigsPerDay' and add mean and median lines for smokers\n",
         "sns.displot(df['cigsPerDay'],kde=True)\n",
         "plt.axvline(df[df['is_smoking']=='YES']['cigsPerDay'].mean(),color='cyan',linestyle='dashed',linewidth=2)\n",
         "plt.axvline(df[df['is_smoking']=='YES']['cigsPerDay'].median(),color='violet',linestyle='dashed',linewidth=2)\n",
@@ -707,6 +706,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Create a boxplot for 'cigsPerDay' for smokers and fill missing values with the median due to outliers\n",
         "plt.title('boxplot of cigsPerDay')\n",
         "sns.boxplot(df[df['is_smoking']=='YES']['cigsPerDay'])"
       ],
@@ -728,6 +728,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Fill missing values in 'cigsPerDay' with the median value for smokers\n",
         "df['cigsPerDay']=df['cigsPerDay'].fillna(df[df['is_smoking']=='YES']['cigsPerDay'].median())"
       ],
       "metadata": {
@@ -739,6 +740,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Create distribution plots and display statistics for 'totChol', 'BMI', 'heartRate', and 'glucose'\n",
         "for i in ['totChol','BMI','heartRate','glucose']:\n",
         "  sns.displot(df[i],kde=True)\n",
         "  plt.axvline(df[i].mean(),linestyle='dashed',color='cyan',linewidth=2)\n",
@@ -754,6 +756,8 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "# Display the mean, median, and mode statistics for the selecte\n",
         "for i in ['totChol','BMI','heartRate','glucose']:\n",
         "  print(i)\n",
         "  print('mean',round(df[i].mean(),2),' median',df[i].median(),'  mode',df[i].mode())\n",
@@ -768,6 +772,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Create a boxplot for 'totChol', 'BMI', 'heartRate', and 'glucose'\n",
         "sns.boxplot(df[['totChol','BMI','heartRate','glucose']])"
       ],
       "metadata": {
@@ -788,6 +793,9 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "# Since 'total_cholesterol', 'bmi', and 'heart_rate' are normally distributed but contain outliers,\n",
+        "# impute missing values with the median\n",
         "for i in ['totChol','BMI','heartRate']:\n",
         "  df[i]=df[i].fillna(df[i].median())"
       ],
@@ -811,17 +819,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df.head()"
-      ],
-      "metadata": {
-        "id": "9ZYa2mOQgSLQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "# Convert binary categorical columns to numerical values\n",
         "df['is_smoking']=np.where(df['is_smoking']=='YES',1,0)\n",
         "df['sex']=np.where(df['sex']=='M',1,0)"
       ],
@@ -904,7 +902,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Exploratory Data Analysis:**"
+        "###**Exploratory Data Analysis:**"
       ],
       "metadata": {
         "id": "5a1nA0wZWMHT"
